--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="/public/bundle.js"></script>
+    <script src="/static/bundle.js"></script>
   </body>
 </html>
